# humming-bird-v2

./: LICENSE  README.md  dataset_v2.json  pyproject.toml  requirements.txt
hbp100/: __init__.py  api.py  version.py
hbp100/assets/: __init__.py  hbp100-v2.pkl  vectorizer.pkl
hbp100/core/: __init__.py  engine.py  metadata.py  pipeline.py
hbp100/extractors/: __init__.py  addresses.py  base.py  dates.py  emails.py  ids.py  manager.py  medical.py  names.py  phones.py
hbp100/interfaces/: __init__.py  extractor.py  placeholder.py  predictor.py
hbp100/placeholders/: __init__.py  generator.py  metadata_vault.py  restore.py  validator.py
hbp100/policy_engine/: __init__.py  context_builder.py  predictor.py
hbp100/schemas/: __init__.py  decision.py  entity.py  placeholder.py  result.py
hbp100/tests/: test_mask.py  test_metadata_vault.py  test_restore.py
hbp100/utils/: __init__.py  helpers.py  logger.py
